# laser_studio_rs

./: .gitignore  Cargo.toml  LICENCE.md  README.md
docs/: introduction.md
docs/expressions/: functions.md  inputs.md  operators.md  outputs.md
src/: app.rs  expressions.rs  main.rs  project.rs
src/app/: documentation.rs  graphical.rs  render.rs  text.rs
src/expressions/: errors.rs  eval.rs  parser.rs
src/expressions/eval/: context.rs  data.rs
src/parser/: nodes.rs
