[package]
name = "laser-studio-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chumsky = "0.8.0"
eframe = "0.19.0"
egui_extras = "0.19.0"
rand = "0.8.5"
serde_json = "1.0.85"
tracing = "0.1.36"
tracing-subscriber = "0.3.15"
