[package]
name = "laser-studio-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = "0.8.0"
chrono = "0.4.22"
chumsky = { git = "https://github.com/zesterer/chumsky" }
eframe = "0.19.0"
egui_extras = "0.19.0"
rand = "0.8.5"
rayon = "1.5.3"
rfd = "0.10.0"
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.85"
tracing = "0.1.36"
tracing-subscriber = "0.3.15"
